[CCAP-716] - Sets the active case load codes in Environment variables